WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
264766
wasm-omg test mode in stress tests should tier up to OMG immediately
https://bugs.webkit.org/show_bug.cgi?id=264766
Summary
wasm-omg test mode in stress tests should tier up to OMG immediately
Asumu Takikawa
Reported
2023-11-13 12:21:46 PST
Currently the wasm-omg test mode for stress tests does not tier up to OMG immediately. For example, the following `run-jsc-stress-tests --debug --filter i31.js` *should* find an assertion failure in B3 that I found manually. (the manual test run for comparison: `run-jsc --jsc-only --debug --useWebAssemblyGC=true --useWebAssemblyTypedFunctionReferences=true --useOMGJIT=true --useBBQJIT=false --thresholdForOMGOptimizeSoon=0 --thresholdForOMGOptimizeAfterWarmup=0 -m i31.js` while in `JSTests/wasm/gc`) The run-jsc-stress-tests script needs some flags that will trigger an immediate tier-up. Possibly --thresholdForOMGOptimizeSoon=0 --thresholdForOMGOptimizeAfterWarmup=0 could work.
Attachments
Add attachment
proposed patch, testcase, etc.
Asumu Takikawa
Comment 1
2023-11-13 13:50:29 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20438
EWS
Comment 2
2023-11-13 20:35:03 PST
Committed
270685@main
(e7f7e511899e): <
https://commits.webkit.org/270685@main
> Reviewed commits have been landed. Closing PR #20438 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-11-13 20:36:15 PST
<
rdar://problem/118372154
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug