wasm-omg test mode in stress tests should tier up to OMG immediately https://bugs.webkit.org/show_bug.cgi?id=264766

Reviewed by Justin Michaud.

The wasm-omg test mode is intended to immediately tier up to OMG in order to
test the tier on all wasm test code. Due to recent tier reconfigurations, this
behavior got lost. To restore it, we add flags to set tier up thresholds to
0 in order to force the tier up.

This patch also contains some OMG tier bug fixes for issues uncovered by the
tests being run in the intended configuration.

* Source/JavaScriptCore/wasm/WasmB3IRGenerator.cpp:
(JSC::Wasm::B3IRGenerator::addRefI31):
(JSC::Wasm::B3IRGenerator::addStructGet):
* Tools/Scripts/run-jsc-stress-tests:

Canonical link: https://commits.webkit.org/270685@main